--- a/holamundo.html
+++ b/holamundo.html
@@ -11,6 +11,7 @@
         <h1> Hola mundo </h1>
         <div>
             <p> Contenido de la pagina </p>
+        </div>
     </header>
 </body>
 </html>
