--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cultura en Bariloche</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="assets/styles.css/estilos.css">
 </head>
 
 <body style="background-color: rgb(255, 255, 255);">
@@ -13,7 +13,7 @@
         <h1>Bienvenido a la Cultura de Bariloche</h1>
     </div>
 
-    <div id="nav">
+    <div>
     <nav>
         <ul>
             <a href="index.html">Inicio</a>
@@ -28,6 +28,8 @@
         La ciudad es conocida por su arquitectura de estilo suizo, sus chocolates artesanales y su cercanía a los Andes. Además, Bariloche es un destino popular para el esquí en invierno y el senderismo en verano. La cultura local está influenciada por la herencia indígena y la inmigración europea, lo que se refleja en su gastronomía, festivales y tradiciones.
         Los visitantes pueden disfrutar de actividades al aire libre, explorar parques nacionales y sumergirse en la historia de la región.
     </p>
+
+    <div id="foto"><img src="assets/images/bariloche.jpg"></div>
 
     <h1 id="titulos">Turismo</h1>
     <p>
