--- a/museos.html
+++ b/museos.html
@@ -5,18 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museos de Bariloche</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="assets/styles.css/estilos.css">
 </head>
 
 <body>  
  <div id="header" style="margin-bottom: 5px;">  
     <h1>Museos más destacados de Bariloche</h1>
  </div>
- <div style="margin-top: 5px;">
-    <nav>  
+
+ <div>
+    <nav>
+      <ul>
         <a href="index.html">Inicio</a>  
         <a href="museos.html">Museos</a>
         <a href="contacto.html">Contacto</a>  
+      </ul>
     </nav>
  </div>
 
@@ -25,11 +28,11 @@
  </div>
  
  <nav id="linkmuseos">
-    <button><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d1233388-Reviews-Parque_Nahuelito-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagonia.html">Parque Nahuelito</a></button>
-    <button><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d5042991-Reviews-Havanna_Museo_del_Chocolate-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagon.html">Museo del Chocolate</a></button>
-    <button><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d552836-Reviews-Museo_de_la_Patagonia-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagonia.html">Museo de la Patagonia</a></button>
-    <button><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d3783310-Reviews-Museo_del_Lago_Gutierrez-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagonia.html">Museo del lago Gutierrez</a></button>
-    <button><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d9728997-Reviews-Museo_Paleontologico_Bariloche-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Pata.html">Museo Paleontologico</a></button>
+    <button id="but"><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d1233388-Reviews-Parque_Nahuelito-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagonia.html">Parque Nahuelito</a></button>
+    <button id="but"><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d5042991-Reviews-Havanna_Museo_del_Chocolate-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagon.html">Museo del Chocolate</a></button>
+    <button id="but"><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d552836-Reviews-Museo_de_la_Patagonia-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagonia.html">Museo de la Patagonia</a></button>
+    <button id="but"><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d3783310-Reviews-Museo_del_Lago_Gutierrez-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Patagonia.html">Museo del lago Gutierrez</a></button>
+    <button id="but"><a href="https://www.tripadvisor.com.ar/Attraction_Review-g312848-d9728997-Reviews-Museo_Paleontologico_Bariloche-San_Carlos_de_Bariloche_Province_of_Rio_Negro_Pata.html">Museo Paleontologico</a></button>
  </nav>
 
 </body>
